2004-08-08  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (%_primary_dict): New hash.
	(_new, variable_delete): Update %_primary_dict.
	(variables): Accept an optional $suffix argument.
	* automake.in (check_typos, am_primary_prefixes): Use that
	optional argument to restrict the loops over the variables we are
	interested in.

2004-08-06  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Item.pm (def): Rewrite more concisely, it's faster
	this way.

2004-08-05  Alexandre Duret-Lutz  <adl@gnu.org>

	Speed up make_paragraphs.
	* automake.in (handle_languages): Always define SUBDIROBJ,
	DERIVED-EXT, and DIST_SOURCE, because the new transform() will
	abort on unknown tokens.
	(transform): Rewrite with different semantics.
	(make_paragraphs): Make a single pass over the paragraph to
	transform all template tokens instead of doing as much passes as
	possible token.

	* automake.in ($libtool_new_api): New variable.
	(handle_libtool): Do not libtool's aux files if $libtool_new_api.
	(scan_autoconf_traces) <LT_SUPPORTED_TAG>: Set $libtool_new_api.
	(scan_autoconf_traces) <AC_REQUIRE_AUX_FILE>: Remember only the
	first location for required files.

2004-08-04  Alexandre Duret-Lutz  <adl@gnu.org>

	Support AC_REQUIRE_AUX_FILE, and fix requirement of AM_PROG_CC_C_O.
	* automake.in (%required_aux_file): New hash.
	(handle_single_transform, lang_c_rewrite): Do note explicitly
	require 'compile', this is now an internal detail of
	AM_PROG_CC_C_O.
	(scan_autoconf_traces): Trace AC_REQUIRE_AUX_FILE and fill
	%required_aux_file.
	(scan_autoconf_files): Require all %required_aux_file instead
	of explicitly requiring install-sh and missing.
	(generate_makefile): Do not require config.sub and config.guess.
	(handle_single_transform): Pass $have_per_exec_flags to
	&lang_c_rewrite.
	* configure.ac, m4/init.m4: Require Autoconf 2.59a.
	* doc/automake.texi (Optional): Document AC_REQUIRE_AUX_FILE.
	(Program and Library Variables, Options, Public macros):