@@ -1,5 +1,9 @@
 2004-08-08  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* automake.in (%am_file_cache): New hash.
+	(make_paragraphs): Cache .am files with comments stripped to save
+	some useless input and substitutions.
+
 	* lib/Automake/Variable.pm (%_primary_dict): New hash.
 	(_new, variable_delete): Update %_primary_dict.
 	(variables): Accept an optional $suffix argument.
